Fix option toggle spacing

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@ h4 {
     display: none;
 }
 
+#display {
+    border: 1px transparent solid;
+}
+
 #add-player-confirmation, #remove-player-confirmation {
     color: green;
 }
@@ -83,10 +87,13 @@ h4 {
     overflow-wrap: break-word;
 }
 
+#options-toggle-container {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
 #options-toggle {
     color: rgb(25, 179, 171);
-    margin-top: 10px;
-    margin-bottom: 30px;
 }
 
 .action-button {
